About: A p5.js tropical cyclone simulation game

v20190209a:
    + Added CPac and PAGASA name lists
    + Added selector for hurricane-strength term in basin creation menu
v20190207a:
    + Added EPac, WPac, and Aus name lists alongside the existing Atl list
        > Use the name list selector in the basin creation menu to access
        > Atl and EPac lists behave per year; WPac and Aus lists are sequential regardless of year (just as you'd expect)
    * Hurricane-strength tropical cyclones now come in 3 flavors: Cyclone, Hurricane, and Typhoon
        > Currently tied to the selected name list; to be made its own option later
v20190206b:
    + Added "Hyper Mode"
        > A new option in the basin creation menu allows for a very hyperactive basin
    * Damage over $1 trillion now displays as T instead of 1000s of B
    * Storms are now named "Unnamed" after the Greek alphabet is exhausted instead of "Name #"
v20190206a:
    + Added some future-proofing for when saved environmental field analysis data is loaded in a version with an incompatible environmental field algorithm
        > The old data will be deleted and map layers will display "Unavailable" in analysis prior to the tick the basin was loaded
    * Optimized how season-crossing storms are stored for saving/loading purposes
v20190204a:
    + Added part of the season loading algorithm (still WIP)
    * "minimal" damage is now below $50 M instead of $1 M
v20190203a:
    + Added part of the season saving algorithm (still WIP)
    * Another change to how analysis environmental field data is stored to make saving/loading easier
v20190201a:
    * Various optimizations to help with saving/loading
v20190131a:
    + Added some more data compression functions for aiding in saving/loading
    * Environmental field data for analysis is now structured per-season to make loading more efficient
v20190129b: