@@ -1,5 +1,8 @@
 About: A p5.js tropical cyclone simulation game
 
+v20190210a:
+    + Added crash screen in case this crashes
+    * Optimizations to Storm and ActiveSystem classes for saving/loading
 v20190209a:
     + Added CPac and PAGASA name lists
     + Added selector for hurricane-strength term in basin creation menu
